--- a/gb/news2008_3.md
+++ b/gb/news2008_3.md
@@ -1,4 +1,20 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/30/n11691842.md#1" target="_blank">喝一杯天然番茄汁 抗老又防癌  还保护心血管</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/30/n11691842.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/tomato-juice-1130-150x120.jpg" align ="left"></a>番茄汁有抗老化、改善心血管疾病、防癌抗癌的作用。比起番茄汁饮料，自制番茄汁新鲜天然、没有额外的添加成分，还保留了番茄原本的营养素。番茄汁作法：
+
+材料：大番茄2颗、开水300毫升。作法：1. 洗净番茄后切小块。2. 所有材料放入果汁机中打匀即可。番茄汁功效：番茄有番茄红素、维生素以及膳食纤维，营养价值很高。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 2:23 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690049.md#1" target="_blank">赤搏涉结冰湖水援救受困狗狗 网友赞真英雄</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690049.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/3ae2ac4d558391c25b6073c25d3be662-150x120.jpg" align ="left"></a>为了救对人类最忠实的狗狗，俄罗斯救难人员冒着生命危险，在随时都有破碎可能的结冰湖面，救援被狗困的狗狗；另外在美国也有一个外出散步的人，看到狗狗困在结冰的河里，迅速脱下衣服，赤搏涉冰水救狗狗，他们的义行让网友大赞真英雄！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 12:36 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11686943.md#1" target="_blank">企鹅群中出现“假企鹅”聪明夜鹭天天混饭吃</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11686943.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/96999eaf58c258a057a289c4be9e00c6-150x120.jpg" align ="left"></a>野生动物为了找食物吃，大多要忙上一整天的时间，不过这一只聪明的动物却懂得用伪装的方法混吃、混喝，被网友笑称是新型的诈骗集团，我们来看看它怎么做的呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 12:17 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/30/n11691615.md#1" target="_blank">养老金何时领划算 提前或延后领有差别吗？</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/30/n11691615.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Fotolia_169667021_Subscription_L-150x120.jpg" align ="left"></a>在完全退休年龄以后开始领取福利者，将能累积“延迟退休积分”，从而享受更多优惠条件，但积分期只到70岁之前为止。即过了70岁以后再工作挣钱，也不会因此领到更多的养老金了。统计显示，从66岁到70岁之间继续工作延迟领取养老金者，70岁后可比不工作者多领到24%的养老金。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 9:44 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/30/n11691239.md#1" target="_blank">挑选好用行李箱   为下一段旅程做准备</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/30/n11691239.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Fotolia_128441947_Subscription_L-150x120.jpg" align ="left"></a>怎么判断行李箱耐不耐用呢？两轮或四轮行李箱，哪种比较适合自己呢？除了这两点，还有什么需要思考的呢？如果您最近打算买一款新行李箱，请参考以下的专家建议，帮助您挑选适合自己的行李箱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 8:10 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11689985.md#1" target="_blank">海洋中不老长生食品——济州红海参凝胶</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11689985.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/c8fa12829d5ca5bf64046c4b52a57b45-150x120.png" align ="left"></a>海参顽强的生命力和再生能力令人称奇，因而海参从古至今都被人们推崇为最佳健康食材之一。最近,韩国济州道一家企业，采用济州海女采集的野生红海参提取的精华物，开发出营养丰富、令现代人更容易食用的红海参凝胶,备受推崇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 3:43 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11681566.md#1" target="_blank">哺乳期间的饮食与营养</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11681566.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/shp191125003-150x120.jpg" align ="left"></a>哺乳期间要不要戒口？可不可以进补?喂哺母乳的妈妈，均衡饮食最为重要，除非妈妈或宝宝对某些食物过敏，一般来说，无须刻意戒口。若怀疑宝宝对你进食的食物有过敏反应，应咨询医生意见。有些宝宝会因妈妈多吃了浓烈味道和容易产生体味的食物，如洋葱、咖喱、辛辣类等，会产生不适而啼哭。如有这情况，妈妈可少吃这类食物。 哺乳的妈妈需限制饮.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 2:32 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684132.md#1" target="_blank">制作晶莹剔透的手工皂：蓝紫星光宝石皂</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684132.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/20191127_sally_Soap_01-150x120.jpg" align ="left"></a>将透明皂基加热后，利用不同的色水调和出各式皂色，再利用一些技巧和修皂方式，制作出晶莹剔透、闪闪发亮的皂款，外型有如宝石般透亮，因此被称为“宝石皂”。有别于以往雾面的手工皂，宝石皂造型吸睛、制作简单，成为全球皂圈竞相创作的皂款。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 10:23 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690242.md#1" target="_blank">感受大地的脉动 支笏洞爷国立公园（上）</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690242.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/415b383f8ab0052eb7d2a89291524dae-150x120.jpg" align ="left"></a>支笏洞爷国立公园不仅景色怡人，还能泡温泉纾压，也有健行路线锻炼体魄，最有特色的是可以一窥火山活动形成的珍贵地质景观。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 9:44 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690848.md#1" target="_blank">温哥华空置税明年提高25％</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690848.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/4515-langara-avenue-vancouver-r2311861-photo-1-zolo-150x120.jpg" align ="left"></a> 温哥华市将在2020纳税年度将房屋空置税提高25％，并计划在接下来的两年中进一步提高空置税，以解决租赁住房长期短缺的危机。目前的税率为1％，到2020年将提高到1.25％。 温哥华的空置房屋税是北美首例此类税。该市表示，自2016年推出空置房屋税以来，该计划已产生了3970万元的净收入，这笔资金将用于为空置率低于百分.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 8:37 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690811.md#1" target="_blank">买东西高手告诉你的四件事</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690811.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/vegetable-shopping-1129-150x120.jpg" align ="left"></a>我在日本很喜欢买东西，买东买西，到处买。家附近有五、六家超市，每天随心情去不同家买，渐渐买出一些小心得。每当朋友来访时，必逛的景点就是我家附近的超市。：一、赏味期限和消费期限（买东西最重要的是看期限。日本大致分两种：赏味期限和消费期限，两者不太相同。）；二、营养成分标示；三、有机农产品；四、“特别栽培农产物”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 8:01 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690322.md#1" target="_blank">【胡乃文开讲】躺着看手机 当心脊椎侧弯！3招矫正脊椎</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690322.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Scoliosis_1082209535-Converted-150x120.jpg" align ="left"></a>经常躺在沙发和床上看手机，可能伤脊椎。躺姿、坐姿、站姿不对，都可能造成脊椎侧弯。脊椎侧弯就是从颈椎、胸椎到腰椎，呈现弯曲的S形状。我曾看到过一个患者，只有7节的颈椎竟弯成S型。当然这是极端的案例，多数人是整个脊椎有一定角度的弯曲变形。造成脊椎侧弯的四大原因？3个方法改善脊椎侧弯：1. 倒退走路。有脊椎侧弯的人......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 4:02 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685070.md#1" target="_blank">欧陆料理不困难 只要学会3种高汤</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685070.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Fotolia_53234667_Subscription_L-1-150x120.jpg" align ="left"></a>好高汤能让料理呈现非凡的风味，千万别漠视它的存在。高汤的用途广泛，主要运用在制作汤品（Soup）、酱汁（Sauce）和炖煮食物（Stew）的基底，大致可分为禽类、肉类、鱼类与蔬菜类等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 10:42 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11688903.md#1" target="_blank">德国6旬男子丧命 只因被小狗舔一舔</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11688903.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Fotolia_102865184_Subscription_L-150x120.jpg" align ="left"></a>养狗人士应该都会让爱犬舔自己，感受被爱的感觉，但小狗的唾液中可能含有对人体有害的病菌，所以还是要小心，千万别因此而被感染。在德国最近就有一名6旬男子就是因为这样而过世，令人遗憾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 2:28 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684678.md#1" target="_blank">4只沾满沥青奶汪动弹不得 救援者花3天清洗重生</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684678.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/b54cab6d5c4171e2122df960e4eeed20-150x120.jpg" align ="left"></a>4只可爱的狗宝宝令人难以置信的遭遇了一场可怕的事故，还差点丧命；幸好印度的动保人员在接到民众求救电话，赶去救援那4只被困住无法动弹的动物。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 11:41 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11688832.md#1" target="_blank">澳洲试驾：宝马 330i M Sport 2020</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11688832.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/20191129-Chi-Jin-BMW-330i-01-150x120.jpg" align ="left"></a>宝马（BMW）3系自1975年诞生至今，已历经45年历史。每一代车型的改款都以宝马优越的操控驾驶为主，在宝马车系中堪称经典，也是年轻人在德系入门的首选车型之一。
 
@@ -23,23 +39,5 @@
 法拉盛有一家开张不久的韩国餐馆Marrizzang，从外面看起来店面不大，却非常受欢迎。来点餐的人觉得，这里很方便，而且菜肴非常美味。
 
 这里的食物种类多样，除了套餐，别.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 7:45 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11680634.md#1" target="_blank">澳女遇袭受重伤 仍吁尊重“肇事者”</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11680634.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-489501824-150x120.jpg" align ="left"></a>维州一女子最近散步遇到袋鼠袭击，身上多处受伤，面部被缝了25针。据七号台新闻网报导，这名受伤女子名叫蒂娜（Dina），来自基沃谷（Kiewa Valley），事发时她正带着狗狗散步。当时狗狗看见了一只袋鼠，便追过去想和它玩耍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 7:09 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11680200.md#1" target="_blank">妈妈患病或需服药时 可否继续授乳?</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11680200.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/11124br111901-150x120.jpg" align ="left"></a>妈妈患病时应否继续授乳？妈妈需要服药，可否继续授乳?对于大部分的疾病来说，妈妈都可继续授乳。除了妈妈是爱滋病患者或爱滋病带菌者，在香港，根据专家的意见，是不建议授乳。至于是乙型肝炎带病毒的妈妈，只要宝宝在出生后尽快接受乙型肝炎免疫球蛋白和乙型肝炎疫苗注射，到宝宝一个月和六个月大时，再次接受乙型肝炎疫苗注射，便可预防宝宝.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 6:57 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685307.md#1" target="_blank">痘疤是挤出来的？皮肤科医师：这样挤痘痘不留疤</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685307.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Squeeze-acne2-1126-150x120.jpg" align ="left"></a>长痘痘的人除了痘痘本身，最担心的恐怕就是痘疤问题。特别是常见的黑痘疤、红痘疤，长在脸上很显眼，但这些痘疤都是可以避免和消去的。研究痘痘多年的皮肤科医师庄盈彦教你挤痘痘、防留疤的正确方法。青春痘是一个慢性皮脂腺发炎的疾病，重点在于“慢性反复的发炎”就会导致永久的疤痕！留下严重痘疤都是因为经年累月长大脓包才可能发生......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 4:39 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684210.md#1" target="_blank">温哥华地税明年拟增8.2%</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684210.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Vancouver-Fotolia-2-1-150x120.jpg" align ="left"></a>根据温哥华市府周一公布的2020年预算草案，明年的地税涨幅高达8.2%，是近10年来涨幅最大的一次，加上水电涨价，温哥华的业主估计明年要增加数百元开销。如果市议会通过这项预算案，意味着温哥华中等价位独立屋的地产税将由3,809 元升至4,163元。市议会计划于年底对预算案进行投票表决，期间有可能增加或降低地税涨幅，正如.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 1:18 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685111.md#1" target="_blank">护发DIY 居家8种食材护发效果超乎意料</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11685111.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Fotolia_200165649_Subscription_L-150x120.jpg" align ="left"></a>除了到昂贵的沙龙护发之外，你可以直接使用家中的食材护发，这些材料的效果可能比一般人想像的还要好。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 12:29 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684002.md#1" target="_blank">只要90秒 加拿大陆军小组把吉普车拆光</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684002.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1148333193-150x120.jpg" align ="left"></a>网上一段短片显示，加拿大陆军一个七人小组在90秒内将一辆吉普车拆解为多个主要部件，随后又用差不多的时间将所有部件组装回去，还原完整的一辆吉普车，充分展现其训练的精良。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 3:27 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11683787.md#1" target="_blank">《睡眠救赎-缺氧型失眠：鱼池平衡理论》书摘（1）</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11683787.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/190513121648100692-150x120.jpg" align ="left"></a>原本我开启这些研究的最先初衷，是想替世上千千万万、每天服用管制毒品来“昏迷”自己而短暂逃避失眠及睡眠障碍问题的可怜人群，去帮助他们脱离这些药物毒害的控制。可是就在我研究达成目标的过程中，我惊讶的发现，透过这些管制药物的安眠机制，将是多么地伤害身体细胞，......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 3:18 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11678948.md#1" target="_blank">一年四季都好吃的15道四季豆食谱（上）</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11678948.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911270037271457-150x120.jpg" align ="left"></a>四季豆鲜嫩多汁，美味又能解油腻。四季豆丰富的营养对人体有帮助，许多蔬食健康食谱中都少不了它。下面介绍15道食谱，天天变换不一样的四季豆料理，满足您挑剔的味蕾，天天吃也不腻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 3:15 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684036.md#1" target="_blank">误食自家菜园用药蔬菜  吃完火锅3人中毒</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/27/n11684036.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/8e58593aeadd492391676c50aea78ba8-150x120.jpg" align ="left"></a>台中龙井区一户5口农家在共同用餐后，3人陆续出现不同程度的头昏、胸闷、冒汗、痉挛、呼吸衰竭等症状，至光田综合医院急诊就医，其中1人一度插管抢救。经医师警觉检查确诊为有机磷中毒，推测是父亲种菜用农药杀虫，未留意农药半衰期未过即采收又未彻底洗净，所幸即时施打解毒剂治疗后一家人平安康复。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 2:51 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11683192.md#1" target="_blank">不想再咳嗽了！中医分享8个止咳偏方</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11683192.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/cough-chinese-medicine_453393130-150x120.jpg" align ="left"></a>感冒咳嗽时，民间有许多小偏方，对于咳嗽的缓解有一定的效果。不过需要注意的是，有许多民众不知其效，随意服用，有时不但没有效果，反而会加重病情。以下介绍几个简单好用的治疗咳嗽小偏方，以及适用的咳嗽类型。止咳嗽的8个偏方：一、冰糖贝母梨汁。生梨1个，川贝母粉3克，冰糖10克。功效：用治干咳无痰等症。二、糖油鸡蛋......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 2:35 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11680020.md#1" target="_blank">驼背久了伤腰易疲劳 每天这样做1分钟改善驼背</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11680020.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/hunchback0_1439819501-150x120.jpg" align ="left"></a>很多人有驼背的问题，驼背久了不仅会引起肩颈酸痛、腰痛，还会压迫胸腔、使呼吸变浅。筋膜放松专家教你矫正驼背的3个简单动作，每日练习10～60秒，就可以轻松改善驼背。1. 改善驼背的筋膜放松操；2. 改善驼背运动；3. 改善驼背伸展操。打电脑头部和双臂往前突出姿势一旦习惯，左右肩胛骨会分离，易变成后背拱起的驼背姿势......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 4:33 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11662068.md#1" target="_blank">便秘治疗的指压推拿法及食疗</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11662068.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/bm1924136023-150x120.jpg" align ="left"></a>中医方面；对便秘的描述早在《伤寒论杂病论》中就有所谓的"大便难"、"脾约"、"不大便"、”不更衣”、"阳结"、"阴结"；皆指便秘，另宋《活人书》称"大便秘"；金元时代又有"虚秘"、"风秘"、.气秘"、.热秘"、”寒秘"、"湿秘"、"热燥"、"风燥"之分，足见中医在便秘的辨证论治是详实而丰富的，是针对各种病因做相应的深入.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 3:24 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682584.md#1" target="_blank">“癌症之王”胰脏癌夺命快 6症状不可忽视</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682584.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Pancreatic-cancer_1007278972-150x120.jpg" align ="left"></a>知名健检机构联安诊所的创办人李文雄，11月22日因胰脏癌病逝，消息震惊外界。胰脏癌难发现，一旦确诊通常已是晚期，而且预后差，被喻为“医生也举白旗投降”的难治之症。早期的胰脏癌几乎没有什么症状，但随着肿瘤扩大，依肿瘤长在胰脏不同部位而出现不同的症状：上腹痛痛、黄疸、大便灰白色、体重减轻及食欲变差、血糖急速上升等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 1:07 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682129.md#1" target="_blank">【爸妈必修课】哺乳建立安全感 否则后患无穷</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682129.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Tu1_shutterstock_116263561-150x120.jpg" align ="left"></a>视频：哺乳阶段必须要做的一件事情！否则日后会导致各种难以解决的问题！
-
-本文刊载于旧金山11月23日教育版
-每周为您献上旧金山最新消息
-责任编辑：李欧......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 6:38 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/news2008_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2008_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/news2008_3.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/news2008_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/news2008_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008_3.htm">http://www.epochtimes.com/gb/news2008_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
